@@ -51,7 +51,7 @@ while (($_ = <STDIN>)) {
                                 my($fh, $filename) = tempfile("file.XXXXX", DIR => $tmpDir, SUFFIX => ".gz" );
                                 $fh->close();
                                 open ZIP, "|gzip $zipOptions -c > $filename" or die "** $filename: $!";
-                                copy($fsize, *ZIP);
+                                copyout($fsize, *ZIP);
                                 close ZIP or die "** $filename: $!";
                                 my $size = (stat($filename))[7];
                                 syswrite STDOUT, "$dump$modebits $uid $gid $psize $size\n$path";
